# pytorch2libtorch

./: .gitignore  LICENSE  README.md
C++_inference/: CMakeLists.txt  main.cpp
pytorch_code/: pth2lib.py
